# nerve-search-adapter

./: Cargo.toml  README.md
src/: client.rs  handler.rs  lib.rs  main.rs  state.rs
tests/: ANVEHSA_SYSTEMS.code-workspace  adapter_lifecycle.rs  handler_tests.rs  integration.rs
