[package]
name = "nerve-search-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
nerve-protocol = { path = "../nerve", package = "nerve" }
crawler = { path = "/Users/shreyasbk/RustroverProjects/crawler/"}
nerve-core = { path = "../nerve-core" }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
tempfile = "3"
tantivy = "0.25"
